fix: ConcurrentHashMap 메모리 누수 방지를 위한 URL 락 해제 추가